// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`diagnosis/add user modal close modal by click close button 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right css-dev-only-do-not-override-txh9fw ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 480px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  添加用户
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <form
                class="ant-form ant-form-vertical css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required"
                        for="username"
                        title="用户名"
                      >
                        用户名
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <input
                            aria-required="true"
                            class="ant-input css-dev-only-do-not-override-txh9fw basic-input-wrapper css-1pd1cd5"
                            id="username"
                            placeholder="请输入{{name}}"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required"
                        for="password"
                        title="密码"
                      >
                        密码
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-input-affix-wrapper ant-input-password basic-input-wrapper css-1pd1cd5 ant-input-affix-wrapper-has-feedback css-dev-only-do-not-override-txh9fw"
                          >
                            <input
                              aria-required="true"
                              class="ant-input css-dev-only-do-not-override-txh9fw"
                              id="password"
                              placeholder="请输入{{name}}"
                              type="password"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span
                                aria-label="eye-invisible"
                                class="anticon anticon-eye-invisible ant-input-password-icon"
                                role="img"
                                tabindex="-1"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="eye-invisible"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                                  />
                                  <path
                                    d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required"
                        for="confirmPassword"
                        title="确认密码"
                      >
                        确认密码
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-input-affix-wrapper ant-input-password basic-input-wrapper css-1pd1cd5 ant-input-affix-wrapper-has-feedback css-dev-only-do-not-override-txh9fw"
                          >
                            <input
                              aria-required="true"
                              class="ant-input css-dev-only-do-not-override-txh9fw"
                              id="confirmPassword"
                              placeholder="请输入{{name}}"
                              type="password"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span
                                aria-label="eye-invisible"
                                class="anticon anticon-eye-invisible ant-input-password-icon"
                                role="img"
                                tabindex="-1"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="eye-invisible"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                                  />
                                  <path
                                    d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required"
                        for="role_id"
                        title="角色名"
                      >
                        角色名
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-required="true"
                            class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-txh9fw ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-loading ant-select-show-search"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-activedescendant="role_id_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="role_id_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-owns="role_id_list"
                                  aria-required="true"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="role_id"
                                  role="combobox"
                                  type="search"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-placeholder"
                              >
                                请选择{{name}}
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow ant-select-arrow-loading"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="loading"
                                class="anticon anticon-loading anticon-spin"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="loading"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="0 0 1024 1024"
                                  width="1em"
                                >
                                  <path
                                    d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-txh9fw ant-btn-default basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-txh9fw ant-btn-primary basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      提 交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`diagnosis/add user modal should match snapshot when modal state is true  1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right css-dev-only-do-not-override-txh9fw ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 480px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  添加用户
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <form
                class="ant-form ant-form-vertical css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required"
                        for="username"
                        title="用户名"
                      >
                        用户名
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <input
                            aria-required="true"
                            class="ant-input css-dev-only-do-not-override-txh9fw basic-input-wrapper css-1pd1cd5"
                            id="username"
                            placeholder="请输入{{name}}"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required"
                        for="password"
                        title="密码"
                      >
                        密码
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-input-affix-wrapper ant-input-password basic-input-wrapper css-1pd1cd5 ant-input-affix-wrapper-has-feedback css-dev-only-do-not-override-txh9fw"
                          >
                            <input
                              aria-required="true"
                              class="ant-input css-dev-only-do-not-override-txh9fw"
                              id="password"
                              placeholder="请输入{{name}}"
                              type="password"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span
                                aria-label="eye-invisible"
                                class="anticon anticon-eye-invisible ant-input-password-icon"
                                role="img"
                                tabindex="-1"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="eye-invisible"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                                  />
                                  <path
                                    d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required"
                        for="confirmPassword"
                        title="确认密码"
                      >
                        确认密码
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-input-affix-wrapper ant-input-password basic-input-wrapper css-1pd1cd5 ant-input-affix-wrapper-has-feedback css-dev-only-do-not-override-txh9fw"
                          >
                            <input
                              aria-required="true"
                              class="ant-input css-dev-only-do-not-override-txh9fw"
                              id="confirmPassword"
                              placeholder="请输入{{name}}"
                              type="password"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span
                                aria-label="eye-invisible"
                                class="anticon anticon-eye-invisible ant-input-password-icon"
                                role="img"
                                tabindex="-1"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="eye-invisible"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                                  />
                                  <path
                                    d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required"
                        for="role_id"
                        title="角色名"
                      >
                        角色名
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-required="true"
                            class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-txh9fw ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-activedescendant="role_id_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="role_id_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-owns="role_id_list"
                                  aria-required="true"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="role_id"
                                  role="combobox"
                                  type="search"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-placeholder"
                              >
                                请选择{{name}}
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-txh9fw ant-btn-default basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-txh9fw ant-btn-primary basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      提 交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`diagnosis/add user modal should send request failed 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right css-dev-only-do-not-override-txh9fw ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 480px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  添加用户
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <form
                class="ant-form ant-form-vertical css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required"
                        for="username"
                        title="用户名"
                      >
                        用户名
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <input
                            aria-required="true"
                            class="ant-input css-dev-only-do-not-override-txh9fw basic-input-wrapper css-1pd1cd5"
                            id="username"
                            placeholder="请输入{{name}}"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required"
                        for="password"
                        title="密码"
                      >
                        密码
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-input-affix-wrapper ant-input-password basic-input-wrapper css-1pd1cd5 ant-input-affix-wrapper-has-feedback css-dev-only-do-not-override-txh9fw"
                          >
                            <input
                              aria-required="true"
                              class="ant-input css-dev-only-do-not-override-txh9fw"
                              id="password"
                              placeholder="请输入{{name}}"
                              type="password"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span
                                aria-label="eye-invisible"
                                class="anticon anticon-eye-invisible ant-input-password-icon"
                                role="img"
                                tabindex="-1"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="eye-invisible"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                                  />
                                  <path
                                    d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required"
                        for="confirmPassword"
                        title="确认密码"
                      >
                        确认密码
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-input-affix-wrapper ant-input-password basic-input-wrapper css-1pd1cd5 ant-input-affix-wrapper-has-feedback css-dev-only-do-not-override-txh9fw"
                          >
                            <input
                              aria-required="true"
                              class="ant-input css-dev-only-do-not-override-txh9fw"
                              id="confirmPassword"
                              placeholder="请输入{{name}}"
                              type="password"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span
                                aria-label="eye-invisible"
                                class="anticon anticon-eye-invisible ant-input-password-icon"
                                role="img"
                                tabindex="-1"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="eye-invisible"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                                  />
                                  <path
                                    d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required"
                        for="role_id"
                        title="角色名"
                      >
                        角色名
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-required="true"
                            class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-txh9fw ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-loading ant-select-show-search"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-activedescendant="role_id_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="role_id_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-owns="role_id_list"
                                  aria-required="true"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="role_id"
                                  role="combobox"
                                  type="search"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-placeholder"
                              >
                                请选择{{name}}
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow ant-select-arrow-loading"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="loading"
                                class="anticon anticon-loading anticon-spin"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="loading"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="0 0 1024 1024"
                                  width="1em"
                                >
                                  <path
                                    d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-txh9fw ant-btn-default basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-txh9fw ant-btn-primary basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      提 交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`diagnosis/add user modal should send request when input correct fields info 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right css-dev-only-do-not-override-txh9fw ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 480px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  添加用户
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <form
                class="ant-form ant-form-vertical css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required"
                        for="username"
                        title="用户名"
                      >
                        用户名
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <input
                            aria-required="true"
                            class="ant-input css-dev-only-do-not-override-txh9fw basic-input-wrapper css-1pd1cd5"
                            id="username"
                            placeholder="请输入{{name}}"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required"
                        for="password"
                        title="密码"
                      >
                        密码
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-input-affix-wrapper ant-input-password basic-input-wrapper css-1pd1cd5 ant-input-affix-wrapper-has-feedback css-dev-only-do-not-override-txh9fw"
                          >
                            <input
                              aria-required="true"
                              class="ant-input css-dev-only-do-not-override-txh9fw"
                              id="password"
                              placeholder="请输入{{name}}"
                              type="password"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span
                                aria-label="eye-invisible"
                                class="anticon anticon-eye-invisible ant-input-password-icon"
                                role="img"
                                tabindex="-1"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="eye-invisible"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                                  />
                                  <path
                                    d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required"
                        for="confirmPassword"
                        title="确认密码"
                      >
                        确认密码
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <span
                            class="ant-input-affix-wrapper ant-input-password basic-input-wrapper css-1pd1cd5 ant-input-affix-wrapper-has-feedback css-dev-only-do-not-override-txh9fw"
                          >
                            <input
                              aria-required="true"
                              class="ant-input css-dev-only-do-not-override-txh9fw"
                              id="confirmPassword"
                              placeholder="请输入{{name}}"
                              type="password"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span
                                aria-label="eye-invisible"
                                class="anticon anticon-eye-invisible ant-input-password-icon"
                                role="img"
                                tabindex="-1"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="eye-invisible"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                                  />
                                  <path
                                    d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required"
                        for="role_id"
                        title="角色名"
                      >
                        角色名
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-required="true"
                            class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-txh9fw ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-loading ant-select-show-search"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-activedescendant="role_id_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="role_id_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-owns="role_id_list"
                                  aria-required="true"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="role_id"
                                  role="combobox"
                                  type="search"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-placeholder"
                              >
                                请选择{{name}}
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow ant-select-arrow-loading"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="loading"
                                class="anticon anticon-loading anticon-spin"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="loading"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="0 0 1024 1024"
                                  width="1em"
                                >
                                  <path
                                    d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-txh9fw ant-btn-default basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-txh9fw ant-btn-primary basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      提 交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;
